# agent

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config.cmake
NOAH/: common  control  control.conf  install  remove
conf/: agent.conf  download.conf  full-routing.conf  log.conf  routing.conf  serve.conf
include/bbts/: bbts_stat.h  bt_info.hpp  cluster_api.h  config.h  consistent_hash_ring.hpp  encode.h  error_category.h  exit_code.hpp  file.h  lazy_singleton.hpp  log.h  options_parse.h  path.h  pbconf.hpp  plugin.h  process_info.h  regex_match.hpp  routing.h  speed_limit.h  statistics.hpp  string_util.h  subnet_mask.h  thrift_tracker.h  timer_util.h  torrent_file_util.h  torrent_plugin.h  torrent_provider.h  transfer_server.h  type_lock.hpp  unix_socket_client.h  unix_socket_connection.h  unix_socket_server.h  worker_pool.h
include/bbts/agent/: task.h  task_db.h  task_manager.h
include/bbts/tool/: bbts_client.h  cluster_downloader.h  control_server.h  disk_allocate_thread.h  downloader.h  resume.h
jars/: pom.xml
libtorrent/: Makefile  libtorrent-0.16.5.patch
plugin/: CMakeLists.txt  hdfstool.cpp
sqlite/: CMakeLists.txt
src/: CMakeLists.txt  bbts_agent.cpp  bbts_client.cpp  bbts_stat.cpp  cluster_api.cpp  cluster_downloader.cpp  control_server.cpp  disk_allocate_thread.cpp  downloader.cpp  encode.cpp  error_category.cpp  file.cpp  file_is_locked.cpp  gko3.cpp  help.cpp  log.cpp  options_parse.cpp  path.cpp  process_info.cpp  resume.cpp  routing.cpp  speed_limit.cpp  string_util.cpp  subnet_mask.cpp  task.cpp  task_db.cpp  task_manager.cpp  thrift_tracker.cpp  timer_util.cpp  torrent_file_util.cpp  torrent_plugin.cpp  torrent_provider.cpp  transfer_server.cpp  unix_socket_client.cpp  unix_socket_connection.cpp  unix_socket_server.cpp  worker_pool.cpp
src/proto/: TorrentProvider.thrift  configure.proto  message.proto  routing.proto  stat.thrift  transfer_server.thrift
uri/: CMakeLists.txt  cache_manager.cpp  cache_manager.h  disk_manager.cpp  disk_manager.h  io.hpp  main.cpp  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  torrent_generator.cpp  torrent_generator.h  uri_agent.hpp  uri_agent_demo.cpp  uri_piece_request.h
